# cdds-cxx

./: CMakeLists.txt  README.md  azure-pipelines.yml
src/: CMakeLists.txt
src/ddscxx/: CMakeLists.txt
src/ddscxx/docs/: CMakeLists.txt  Doxyfile.in  EXAMPLES.md  MIGRATION.md  README.md  SNIPPETS.md  UNSUPPORTED.md  predoxygen.py
src/ddscxx/include/dds/core/cond/detail/: Condition.hpp  GuardCondition.hpp  StatusCondition.hpp  TConditionImpl.hpp  TGuardConditionImpl.hpp  TStatusConditionImpl.hpp  TWaitSetImpl.hpp  WaitSet.hpp
src/ddscxx/include/dds/core/detail/: BuiltinTopicTypes.hpp  ReferenceImpl.hpp  TEntityImpl.hpp  TEntityQosImpl.hpp  TInstanceHandleImpl.hpp  TQosProviderImpl.hpp  Value.hpp  WeakReferenceImpl.hpp  conformance.hpp  ddscore.hpp  inttypes.hpp  macros.hpp  module_docs.hpp  ref_traits.hpp
src/ddscxx/include/dds/core/policy/detail/: TCorePolicyImpl.hpp  TQosPolicyCountImpl.hpp
src/ddscxx/include/dds/core/status/detail/: TStatusImpl.hpp
src/ddscxx/include/dds/core/xtypes/detail/: Annotation.hpp  CollectionTypes.hpp  DynamicData.hpp  DynamicType.hpp  MemberType.hpp  PrimitiveTypes.hpp  StructType.hpp  TypeProvider.hpp  UnionCase.hpp  UnionType.hpp
src/ddscxx/include/dds/domain/detail/: TDomainParticipantImpl.hpp  ddsdomain.hpp
src/ddscxx/include/dds/pub/detail/: AnyDataWriter.hpp  CoherentSet.hpp  SuspendedPublication.hpp  TAnyDataWriterImpl.hpp  TCoherentSetImpl.hpp  TPublisherImpl.hpp  TSuspendedPublicationImpl.hpp  ddspub.hpp  discovery.hpp  find.hpp
src/ddscxx/include/dds/sub/cond/detail/: ReadCondition.hpp  TQueryConditionImpl.hpp  TReadConditionImpl.hpp
src/ddscxx/include/dds/sub/detail/: AnyDataReader.hpp  CoherentAccess.hpp  DataReader.hpp  GenerationCount.hpp  LoanedSamples.hpp  LoanedSamplesImpl.hpp  Manipulators.hpp  Query.hpp  Rank.hpp  SampleInfo.hpp  SamplesHolder.hpp  SharedSamples.hpp  SharedSamplesImpl.hpp  TAnyDataReaderImpl.hpp  TCoherentAccessImpl.hpp  TDataReaderImpl.hpp  TGenerationCountImpl.hpp  TQueryImpl.hpp  TRankImpl.hpp  TSampleImpl.hpp  TSampleInfoImpl.hpp  TSubscriberImpl.hpp  ddssub.hpp  discovery.hpp  find.hpp
src/ddscxx/include/dds/sub/status/detail/: DataStateImpl.hpp
src/ddscxx/include/dds/topic/detail/: AnyTopic.hpp  Filter.hpp  TAnyTopicImpl.hpp  TBuiltinTopicImpl.hpp  TBuiltinTopicKeyImpl.hpp  TContentFilteredTopicImpl.hpp  TFilterImpl.hpp  TTopicDescriptionImpl.hpp  TTopicImpl.hpp  Topic.hpp  TopicDescription.hpp  TopicInstanceImpl.hpp  ddstopic.hpp  discovery.hpp  find.hpp
src/ddscxx/include/org/eclipse/cyclonedds/: ForwardDeclarations.hpp
src/ddscxx/include/org/eclipse/cyclonedds/core/: DDScObjectDelegate.hpp  EntityDelegate.hpp  EntityRegistry.hpp  EntitySet.hpp  InstanceHandleDelegate.hpp  ListenerDispatcher.hpp  MiscUtils.hpp  Mutex.hpp  ObjectDelegate.hpp  ObjectSet.hpp  QosProviderDelegate.hpp  ReportUtils.hpp  ScopedLock.hpp  TimeHelper.hpp  WeakReferenceSet.hpp  config.hpp
src/ddscxx/include/org/eclipse/cyclonedds/core/cond/: ConditionDelegate.hpp  FunctorHolder.hpp  GuardConditionDelegate.hpp  ShadowParticipant.hpp  StatusConditionDelegate.hpp  WaitSetDelegate.hpp
src/ddscxx/include/org/eclipse/cyclonedds/core/policy/: Policy.hpp  PolicyDelegate.hpp  ProprietaryPolicyKind.hpp  QosPolicyCountDelegate.hpp  TPolicy.hpp
src/ddscxx/include/org/eclipse/cyclonedds/core/status/: StatusDelegate.hpp
src/ddscxx/include/org/eclipse/cyclonedds/domain/: Domain.hpp  DomainParticipantDelegate.hpp  DomainParticipantListener.hpp  DomainParticipantRegistry.hpp  DomainWrap.hpp
src/ddscxx/include/org/eclipse/cyclonedds/domain/qos/: DomainParticipantQosDelegate.hpp
src/ddscxx/include/org/eclipse/cyclonedds/pub/: AnyDataWriterDelegate.hpp  CoherentSetDelegate.hpp  PublisherDelegate.hpp  SuspendedPublicationDelegate.hpp
src/ddscxx/include/org/eclipse/cyclonedds/pub/qos/: DataWriterQosDelegate.hpp  PublisherQosDelegate.hpp
src/ddscxx/include/org/eclipse/cyclonedds/sub/: AnyDataReaderDelegate.hpp  BuiltinSubscriberDelegate.hpp  CoherentAccessDelegate.hpp  GenerationCountImpl.hpp  QueryDelegate.hpp  RankImpl.hpp  SampleInfoImpl.hpp  SubscriberDelegate.hpp
src/ddscxx/include/org/eclipse/cyclonedds/sub/cond/: QueryConditionDelegate.hpp  ReadConditionDelegate.hpp
src/ddscxx/include/org/eclipse/cyclonedds/sub/qos/: DataReaderQosDelegate.hpp  SubscriberQosDelegate.hpp
src/ddscxx/include/org/eclipse/cyclonedds/topic/: AnyTopicDelegate.hpp  AnyTopicListener.hpp  BuiltinTopic.hpp  BuiltinTopicCopy.hpp  BuiltinTopicDelegate.hpp  BuiltinTopicKeyDelegate.hpp  BuiltinTopicTraits.hpp  DataRepresentation.hpp  FilterDelegate.hpp  TBuiltinTopic.hpp  TopicDescriptionDelegate.hpp  TopicListener.hpp  TopicTraits.hpp  discovery.hpp  find.hpp
src/ddscxx/src/dds/core/: Duration.cpp  Exception.cpp  Reference.cpp  Time.cpp
src/ddscxx/src/dds/core/policy/: CorePolicy.cpp
src/ddscxx/src/dds/core/status/: State.cpp
src/ddscxx/src/dds/domain/: find.cpp
src/ddscxx/src/dds/pub/: pubdiscovery.cpp
src/ddscxx/src/dds/sub/: subdiscovery.cpp  subfind.cpp
src/ddscxx/src/dds/sub/status/: DataState.cpp
src/ddscxx/src/org/eclipse/cyclonedds/core/: DDScObjectDelegate.cpp  EntityDelegate.cpp  EntitySet.cpp  InstanceHandleDelegate.cpp  ListenerDispatcher.cpp  MiscUtils.cpp  Mutex.cpp  ObjectDelegate.cpp  ObjectSet.cpp  ReportUtils.cpp
src/ddscxx/src/org/eclipse/cyclonedds/domain/: Domain.cpp  DomainParticipantDelegate.cpp  DomainParticipantRegistry.cpp  DomainWrap.cpp
src/ddscxx/src/org/eclipse/cyclonedds/pub/: AnyDataWriterDelegate.cpp  PublisherDelegate.cpp
src/ddscxx/src/org/eclipse/cyclonedds/sub/: AnyDataReaderDelegate.cpp  BuiltinSubscriberDelegate.cpp  QueryDelegate.cpp  SubscriberDelegate.cpp
src/ddscxx/src/org/eclipse/cyclonedds/topic/: AnyTopicDelegate.cpp  FilterDelegate.cpp  TopicDescriptionDelegate.cpp  find.cpp
src/ddscxx/tests/: CMakeLists.txt  EntityStatus.cpp  ListenerSetup.cpp  ListenerStress.cpp  ListenerTrigger.cpp
src/ddscxx/tests/data/: HelloWorldData.idl  Space.idl
src/examples/helloworld/: CMakeLists.export.in  CMakeLists.txt  HelloWorldData.idl  publisher.cpp  subscriber.cpp
(+26 files in other folders)
